--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button>Log In</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <script src="app.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/greetings.js"></script>
 </body>
 </html>
