--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Momentum</title>
 </head>
 <body>
+    <h2 id="clock">00:00:00</h2>
     <form class="hidden" id="login-form">
         <input 
             required
@@ -16,8 +17,11 @@
         />
         <button>Log In</button>
     </form>
-    <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+        <input type="text" placeholder="Write a To Do ans Press Enter" required>
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quotes">
         <span></span>
         <span></span>
@@ -26,5 +30,6 @@
     <script src="js/greetings.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
 </body>
 </html>
