--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     <h2 id="clock">00:00:00</h2>
     <form class="hidden" id="login-form">
-        <input 
+        <input
+            id="login"
             required
             maxlength="15"
             type="text" placeholder="What is your name?"
         />
-        <button>Log In</button>
+        <button id="login-button">Log In</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
