--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
-        <input type="text" placeholder="Write a To Do ans Press Enter" required>
+        <input id="todo-input" type="text" placeholder="Write a To Do ans Press Enter" required>
+        <button id="login-button">Enter</button>
     </form>
     <ul id="todo-list"></ul>
     <div id="quotes">
