--- a/index.html
+++ b/index.html
@@ -8,35 +8,51 @@
     <title>Momentum</title>
 </head>
 <body>
-    <h2 id="clock">00:00:00</h2>
-    <form class="hidden" id="login-form">
-        <input
-            id="login"
-            required
-            maxlength="15"
-            type="text" placeholder="What is your name?"
-        />
-        <button id="login-button">Log In</button>
-    </form>
-    <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-        <input id="todo-input" type="text" placeholder="Write a To Do ans Press Enter" required>
-        <button id="login-button">Enter</button>
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quotes">
-        <span></span>
-        <span></span>
-    </div>
-    <div id="weather">
-        <span></span>
-        <span></span>
-    </div>
+    <main id="main-form">
+        <section>
+            <h2 id="clock">00:00:00</h2>
+            <h3 id="date"></h3>
+        </section>
+        <section>
+            <div id="weather">
+                <span></span>
+                <span></span>
+            </div>
+        </section>
+        <section>
+            <form class="hidden" id="login-form">
+                <input
+                    id="login"
+                    required
+                    maxlength="15"
+                    type="text" placeholder="What is your name?"
+                />
+                <button id="login-button">Login</button>
+            </form>
+            <h1 id="greeting" class="hidden"></h1>
+        </section>
+        <section id="todo" class="hidden">
+            <form id="todo-form">
+                <input id="todo-input" type="text" placeholder="Write a To Do ans Press Enter" required>
+                <button id="login-button">Enter</button>
+            </form>
+            <div id="todo-list-container">
+                <span></span>
+                <ul id="todo-list"></ul>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div id="quotes">
+            <span></span>
+            <span></span>
+        </div>
+    </footer>
     <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
-    <script src="js/weather.js"></script>
+    <!-- <script src="js/weather.js"></script> -->
 </body>
 </html>
