--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
                 />
                 <button id="login-button">Login</button>
             </form>
-            <h1 id="greeting" class="hidden"></h1>
+            <div>
+                <h1 id="greeting" class="hidden"></h1>
+                <button id="logout-button" class="hidden">Logout</button>
+            </div>
         </section>
         <section id="todo" class="hidden">
             <form id="todo-form">
-                <input id="todo-input" type="text" placeholder="Write a To Do ans Press Enter" required>
+                <input id="todo-input" type="text" placeholder="Write a ToDo and Press Enter" required>
                 <button id="login-button">Enter</button>
             </form>
             <div id="todo-list-container">
